--- a/Reports/vtaig/survey.html
+++ b/Reports/vtaig/survey.html
@@ -1,5 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title></title></head>
+<head><title></title>
+    <link type="text/css" rel="stylesheet" href="/css/normalize.css" />
+    <link type="text/css" rel="stylesheet" href="/css/styles.css" />
+</head>
 <body>
     <h1>VTAIG Collision Survey</h1>
     Here is the text of the survey.
