--- a/Reports/vtaig/survey.html
+++ b/Reports/vtaig/survey.html
@@ -1,10 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title></title>
+<head><title>VTAIG Collision Survey</title>
     <link type="text/css" rel="stylesheet" href="/css/normalize.css" />
     <link type="text/css" rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <h1>VTAIG Collision Survey</h1>
-    Here is the text of the survey.
+    <h1></h1>
+    
+  <center>  <img alt="" src="VTAIGSurvey.jpg" style="width: 816px; height: 576px" /></center>
 </body>
 </html>
